tests/fail/LogicRightShift.java
package fail;

import java.lang.System;

public class LogicRightShift {
    public static void main(String[] args) {
        System.out.println(1 >>> 'a');
    }
}
